# servier-drugs-analyzer

./: README.md
graph-builder/: Dockerfile  pyproject.toml
graph-builder/graph_builder/: runner.py  spark.py
graph-builder/graph_builder/engine/: constants.py  graph_builder.py  reader.py  schemas.py  writer.py
graph-builder/tests/: test_graph_builder_end_to_end.py
graph-builder/tests/resources/: pubmed.csv
graph-builder/tests/resources/expected_drugs_graph.json/: .part-00000-85738003-43ef-44d2-b92d-3277cfd5830d-c000.json.crc  .part-00001-85738003-43ef-44d2-b92d-3277cfd5830d-c000.json.crc  part-00000-85738003-43ef-44d2-b92d-3277cfd5830d-c000.json  part-00001-85738003-43ef-44d2-b92d-3277cfd5830d-c000.json
kpi-calculator/: Dockerfile  pyproject.toml
kpi-calculator/kpi_calculator/: runner.py  spark.py
kpi-calculator/kpi_calculator/engine/: calculator.py  reader.py  writer.py
kpi-calculator/tests/: test_kpi_calculator_end_to_end.py
kpi-calculator/tests/resources/drugs_graph.json/: .part-00000-98005438-09f1-4120-a9ec-9d9245e4cb97-c000.json.crc  part-00000-98005438-09f1-4120-a9ec-9d9245e4cb97-c000.json
kpi-calculator/tests/resources/expected_kpi.json/: .part-00000-86963aa0-5ecd-443a-84f9-1fa6c45ec9c9-c000.json.crc  part-00000-86963aa0-5ecd-443a-84f9-1fa6c45ec9c9-c000.json
